#
# some news ... see also TODO for hints
#


2021-05-19 -> ## amtrack stuff
              add first tests
	      add LCD size via kd argument

              ## lcd2004_i2c stuff
              add first tests
	      smaller updates
	      add LCD size via kdo argument
	      handle LCD size
	      add write line and write string function

	      ## libhelper stuff
	      add some LCD specific defines
	      add some first docker-pi specific defines
	      rework struct lcd_request

              ## repo stuff
              update runit files
	      some documentation adds/changes/fixes/improvements

2021-05-15 -> ## repo stuff
	      add some new pics of the development environment
	      some documentation adds/changes/fixes/improvements

2021-05-15 -> ## repo stuff
	      some documentation adds/changes/fixes/improvements

2021-05-14 -> ## amtrack stuff
              add skeleton

              ## repo stuff
	      some documentation adds/changes/fixes/improvements
	      add amtrack folder

              ## lcd2004_i2c stuff
              optimize fifo handling

              ## libhelper stuff
	      add clear_flags function

2021-05-13 -> ## target stuff
	      add agetty.tty7/8 and activte them
	      activate rsyslog and add config for tty11 and tty12
	      copy lcd/sensor_daemon runit scripts to /etc/sv

              ## repo stuff
	      some documentation adds/changes/fixes/improvements

	      ## lcd2004_i2c stuff
	      add error handling
	      add first parts of fifo handling
	      add thread for fifo handling

              ## libhelper stuff
	      add first parts of fifo handling

              ## sensor_pi stuff
	      add run script

2021-05-12 -> ## repo stuff
	      add folder etc with ruint service definitions
	      some documentation adds/changes/fixes/improvements

              ## libhelper stuff
	      add some more functions

              ## lcd2004_i2c stuff
	      finalize daemon handling

2021-05-11 -> ## repo stuff